--- a/table/templates/table/query_result.html
+++ b/table/templates/table/query_result.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="{% static 'images/ico.png' %}" type="image/png">
     <title>Результат запроса</title>
 </head>
 <body>
