--- a/table/templates/table/query_result.html
+++ b/table/templates/table/query_result.html
@@ -37,7 +37,7 @@
                 <td contenteditable="true">{{ value }}</td>
                 {% endfor %}
                 <td>
-                    <button type="button" class="btn btn-sm btn-danger delete-row">🗑️ Удалить</button>
+                    <button type="button" class="btn btn-sm btn-danger delete-row">Удалить</button>
                     <button type="button" class="btn btn-sm btn-secondary move-up">↑</button>
                     <button type="button" class="btn btn-sm btn-secondary move-down">↓</button>
                 </td>
