--- a/table/templates/table/query_create.html
+++ b/table/templates/table/query_create.html
@@ -17,6 +17,10 @@
             </div>
         {% endfor %}
     </div>
+    <script>
+        // Удаляем сообщение после его отображения
+        fetch("{% url 'clear_messages' %}", { method: 'POST' });
+    </script>
 {% endif %}
 <div class="container mt-5">
     <h1>Создать запрос</h1>
