--- a/table/templates/table/query_edit.html
+++ b/table/templates/table/query_edit.html
@@ -12,7 +12,7 @@
 {% if messages %}
     <div class="container mt-3">
         {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">
+            <div class="alert alert-danger" role="alert">
                 {{ message }}
             </div>
         {% endfor %}
