--- a/table/templates/table/query_list.html
+++ b/table/templates/table/query_list.html
@@ -6,31 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="{% static 'images/ico.png' %}" type="image/png">
-
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <title>Список таблиц</title>
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .hero-section {
-            background-color: #007bff;
-            color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            text-align: center;
-        }
-        .list-group-item:hover {
-            background-color: #f1f1f1;
-            cursor: pointer;
-        }
-        .btn-custom {
-            background-color: #0056b3;
-            border-color: #004494;
-        }
-        .btn-custom:hover {
-            background-color: #004494;
-        }
-    </style>
 </head>
 <body>
     <div class="container mt-5">
