--- a/table/templates/table/query_list.html
+++ b/table/templates/table/query_list.html
@@ -10,44 +10,40 @@
     <title>Список таблиц</title>
 </head>
 <body>
-<div class="container mt-5">
-    <!-- Hero Section -->
-    <div class="hero-section mb-5">
-        <h1>Добро пожаловать в наш сервис автоматизации таблиц!</h1>
-        <p class="mt-3">Наш сервис упрощает создание, редактирование и управление таблицами. Просто создайте запрос,
-            проверьте данные, и получите таблицу в удобном формате!</p>
-        <a href="{% url 'query_create' %}" class="btn btn-light btn-lg mt-3">Начать создание таблицы</a>
-    </div>
+    <div class="container mt-5">
+        <!-- Hero Section -->
+        <div class="hero-section mb-5">
+            <h1>Добро пожаловать в наш сервис автоматизации таблиц!</h1>
+            <p class="mt-3">Наш сервис упрощает создание, редактирование и управление таблицами. Просто создайте запрос, проверьте данные, и получите таблицу в удобном формате!</p>
+            <a href="{% url 'query_create' %}" class="btn btn-light btn-lg mt-3">Начать создание таблицы</a>
+        </div>
 
-    <!-- Список таблиц -->
-    <h2 class="mb-4">Ваши таблицы</h2>
-    {% if queries %}
-    <ul class="list-group">
-        {% for query in queries %}
-        <li class="list-group-item d-flex justify-content-between align-items-center"
-            onclick="window.location.href='{% url 'query_result' query.pk %}';">
-            <div>
-                <a href="{% url 'query_result' query.pk %}" class="text-decoration-none fw-bold text-primary">
-                    {{ query.query_text|truncatechars:100 }}
-                </a>
-                <p class="mb-0 text-muted">Дата создания: <span class="utc-time"
-                                                                data-utc-time="{{ query.created_at|date:'Y-m-d\\TH:i:s\\Z' }}"></span>
-                </p>
+        <!-- Список таблиц -->
+        <h2 class="mb-4">Ваши таблицы</h2>
+        {% if queries %}
+            <ul class="list-group">
+                {% for query in queries %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center"  onclick="window.location.href='{% url 'query_result' query.pk %}';">
+                        <div>
+                            <a href="{% url 'query_result' query.pk %}" class="text-decoration-none fw-bold text-primary">
+                                {{ query.query_text|truncatechars:100 }}
+                            </a>
+                            <p class="mb-0 text-muted">Дата создания: {{ query.created_at|date:"d.m.Y H:i" }}</p>
+                        </div>
+                        <form method="POST" action="{% url 'query_delete' query.pk %}" class="ms-3">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger btn-sm">Удалить</button>
+                        </form>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <div class="alert alert-info" role="alert">
+                У вас пока нет созданных таблиц. Нажмите на кнопку "Начать создание таблицы", чтобы создать первую таблицу!
             </div>
-            <form method="POST" action="{% url 'query_delete' query.pk %}" class="ms-3">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger btn-sm">Удалить</button>
-            </form>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <div class="alert alert-info" role="alert">
-        У вас пока нет созданных таблиц. Нажмите на кнопку "Начать создание таблицы", чтобы создать первую таблицу!
+        {% endif %}
     </div>
-    {% endif %}
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
